--- a/mvc_pattern/mvc_pattern/WebContent/WEB-INF/config/dispatcher-servlet.properties
+++ b/mvc_pattern/mvc_pattern/WebContent/WEB-INF/config/dispatcher-servlet.properties
@@ -3,6 +3,7 @@ login=kr.co.kyobo.controller.LoginController
 logout=kr.co.kyobo.controller.LogoutController
 input=kr.co.kyobo.controller.customer.InputController
 save=kr.co.kyobo.controller.customer.SaveController
+idcheck=kr.co.kyobo.controller.customer.CheckController
 boardList=kr.co.kyobo.controller.board.ListController
 boardInput=kr.co.kyobo.controller.board.InputController
 boardSave=kr.co.kyobo.controller.board.SaveController
