--- a/mvc_pattern/mvc_pattern/WebContent/WEB-INF/config/dispatcher-servlet.properties
+++ b/mvc_pattern/mvc_pattern/WebContent/WEB-INF/config/dispatcher-servlet.properties
@@ -1,15 +1,17 @@
-home=kr.co.kyobo.controller.HomeController
-login=kr.co.kyobo.controller.LoginController
-logout=kr.co.kyobo.controller.LogoutController
-input=kr.co.kyobo.controller.customer.InputController
-save=kr.co.kyobo.controller.customer.SaveController
-idcheck=kr.co.kyobo.controller.customer.CheckController
-boardList=kr.co.kyobo.controller.board.ListController
-boardInput=kr.co.kyobo.controller.board.InputController
-boardSave=kr.co.kyobo.controller.board.SaveController
-boardView=kr.co.kyobo.controller.board.ViewController
-boardDelete=kr.co.kyobo.controller.board.DeleteController
-updateInput=kr.co.kyobo.controller.board.UpdateInputController
-boardUpdate=kr.co.kyobo.controller.board.UpdateController
-company=kr.co.kyobo.controller.company.CompanyController
-solution=kr.co.kyobo.controller.solution.SolutionController
+home=kr.co.trinity.controller.HomeController
+login=kr.co.trinity.controller.LoginController
+logout=kr.co.trinity.controller.LogoutController
+input=kr.co.trinity.controller.customer.InputController
+save=kr.co.trinity.controller.customer.SaveController
+boardList=kr.co.trinity.controller.board.ListController
+boardInput=kr.co.trinity.controller.board.InputController
+boardSave=kr.co.trinity.controller.board.SaveController
+boardView=kr.co.trinity.controller.board.ViewController
+boardDelete=kr.co.trinity.controller.board.DeleteController
+updateInput=kr.co.trinity.controller.board.UpdateInputController
+boardUpdate=kr.co.trinity.controller.board.UpdateController
+company=kr.co.trinity.controller.company.CompanyController
+solution=kr.co.trinity.controller.solution.SolutionController
+administrator=kr.co.trinity.controller.admin.AdministratorController
+adminlogin=kr.co.trinity.controller.admin.AdminLoginController
+backup=kr.co.trinity.controller.admin.BackUpController
