--- a/mvc_pattern/mvc_pattern/WebContent/WEB-INF/web.xml
+++ b/mvc_pattern/mvc_pattern/WebContent/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <description></description>
     <display-name>DispatcherServlet</display-name>
     <servlet-name>DispatcherServlet</servlet-name>
-    <servlet-class>kr.co.kyobo.controller.DispatcherServlet</servlet-class>
+    <servlet-class>kr.co.trinity.controller.DispatcherServlet</servlet-class>
   	<init-param>
   		<param-name>configLoaction</param-name>
   		<param-value>/WEB-INF/config/dispatcher-servlet.properties</param-value>
@@ -21,10 +21,16 @@
     <url-pattern>/company</url-pattern>
     <url-pattern>/solution</url-pattern>
   </servlet-mapping>
-  <resource-ref>
-<description>Connection Pool</description>
+  <resource-ref> 
+    <description>DB Connection</description> 
+    <res-ref-name>jdbc/TestDB</res-ref-name> 
+    <res-type>javax.sql.DataSource</res-type> 
+    <res-auth>Container</res-auth>
+ </resource-ref>
+  <!-- <resource-ref>
+  <description>Connection Pool</description>
 <res-ref-name>jdbc/confluence</res-ref-name>
 <res-type>javax.sql.Datasource</res-type>
 <res-auth>Container</res-auth>
-</resource-ref>
+</resource-ref> -->
 </web-app>
